--- a/nav.html
+++ b/nav.html
@@ -2,7 +2,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
            
-            <a class="navbar-brand fw-bold" href="#">Burger Shop</a>
+            <a class="navbar-brand fw-bold" href="index.html">Burger Shop</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
