--- a/adminLogin.html
+++ b/adminLogin.html
@@ -23,6 +23,7 @@
             margin-bottom: 20px;
         }
     </style>
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
 
@@ -43,7 +44,7 @@
                 <input type="password" class="form-control" placeholder="Enter password" id="password">
             </div>
 
-            <button type="submit" class="btn btn-dark w-100 mt-2" onclick="login();">Login</button>
+            <button type="button" class="btn btn-dark w-100 mt-2" onclick="login();">Login</button>
         </form>
     </div>
 
