--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
         <h2 class="text-center mb-4 fw-bold">Our Burgers</h2>
 
         <div class="row g-4">
+        <div id="productList">
 
+        </div>
             <!-- Card 1 -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card burger-card shadow-sm">
                     <img src="assets/burger2.jpg" class="card-img-top" alt="Classic Burger">
                     <div class="card-body">
@@ -54,10 +56,10 @@
                         <p class="fw-bolder">Rs. 900</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Card 2 -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card burger-card shadow-sm">
                     <img src="assets/burger3.jpg" class="card-img-top" alt="Cheese Explosion">
                     <div class="card-body">
@@ -66,10 +68,10 @@
                         <p class="fw-bolder">Rs. 1000</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Card 3 -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card burger-card shadow-sm">
                     <img src="assets/burger4.jpg" class="card-img-top" alt="Spicy Hot Burger">
                     <div class="card-body">
@@ -78,10 +80,10 @@
                         <p class="fw-bolder">Rs. 1300</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Card 4 -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card burger-card shadow-sm">
                     <img src="assets/burger5.jpg" class="card-img-top" alt="Spicy Hot Burger">
                     <div class="card-body">
@@ -91,10 +93,10 @@
                         <p class="fw-bolder">Rs. 1200</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Card 5 -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card burger-card shadow-sm">
                     <img src="assets/burger&fries.jpg" class="card-img-top" alt="Spicy Hot Burger">
                     <div class="card-body">
@@ -104,10 +106,10 @@
                         <p class="fw-bolder">Rs. 850</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Card 6 -->
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="card burger-card shadow-sm">
                     <img src="assets/burger&coce.jpg" class="card-img-top" alt="Spicy Hot Burger">
                     <div class="card-body">
@@ -116,7 +118,7 @@
                         <p class="fw-bolder">Rs. 900</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
