Feature : Add delete customer

--- a/adminPanel.html
+++ b/adminPanel.html
@@ -124,7 +124,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr id="productList">
+                                        <tr id="avaiableProducts">
 
                                         </tr>
                                     </tbody>
